--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-7.38MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-350.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.27MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.09MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-380.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-5.92MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.77MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-10.50MB/s(Youtube:不良林), server: 203.138.98.199, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活1天)香港-4.66MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.58MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.66MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.66MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.66MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活1天)香港-4.66MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.66MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.66MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.66MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.66MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
