--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.77MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.16MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.64MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-350.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-261.8KB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
-  - {name: 🇨🇳 中国-4.36MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.70MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.64MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.51MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.16MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-4.13MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇫🇷 法国-1.43MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
